finish mvp of predict model ui

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
                 <link href="<%= htmlWebpackPlugin.options.cdn.js[i] %>" rel="preload" as="script">
                 <% } %>
                     <title>
-                        <%= VUE_APP_TITLE %>
+                        快递员揽件顺序预测预测平台
+                        <!-- <%= VUE_APP_TITLE %> -->
                     </title>
                     <style>
                         html,
@@ -88,9 +89,9 @@
                 <img class="d2-home__loading" src="./image/loading/loading-spin.svg" alt="loading">
             </div>
             <div class="d2-home__footer">
-                <a href="https://github.com/d2-projects/d2-admin" target="_blank">
-            https://github.com/d2-projects/d2-admin
-          </a>
+                <!-- <a href="https://github.com/d2-projects/d2-admin" target="_blank"> -->
+                <!-- https://github.com/d2-projects/d2-admin -->
+                </a>
             </div>
         </div>
     </div>
